arkts_static_test/05_Generics/ets_cases/5.1.4_Wildcard_Type/compile-pass/GEN_05_01_04_001_PASS_WILDCARD_DECL.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id GEN_05_01_04_001_PASS_WILDCARD_DECL
 * @expect compile-pass
 * @section 5.1.4
 * @design instanceofжөңС…ж•“й–«ж°¶еҺӨз»—пёҫиў«йҚЁе¬¬ж®‘е§қпҪ…жӮңжҘ еІғзҳү
 * @note йҸҮеӨёе”¬йҚҳзғіyContainer<Object>йҗўг„Өз·Ҙй”ӣеұҫж•јж¶“жҙӘвӮ¬ж°¶еҺӨз»—п№Җз–„й—„е‘ӯжәҖйҸ…?
 */
class X001<T> { 
  public p: T; constructor(v: T) { this.p = v } }
function wildcardDeclTest(): void {
  let obj: Object = new X001<string>('hello')
  if (obj instanceof X001) {
    let w: Any = obj
    console.log('wildcard')
  }
}